# obelisk

./: default.nix
dep/reflex-platform/: github.json
exe/linux-desktop/: obelisk-linux-desktop.cabal
exe/linux-desktop/src/: LinuxApp.hs
lib/backend/src/Obelisk/: Backend.hs
lib/frontend/src/Obelisk/: Frontend.hs
lib/linux-webkit2gtk/: obelisk-linux-webkit2gtk.cabal
lib/linux-webkit2gtk/src-bin/: DesktopLinux.hs
lib/linux-webkit2gtk/src/Obelisk/Linux/: Run.hs  Webkit2Gtk.hs
